--- a/form.html
+++ b/form.html
@@ -22,11 +22,13 @@
       <input type="number" id="umur" placeholder="Umur" required>
       <button type="submit" class="saveBtn">Simpan</button>
     </form>
-    <button class="backBtn" onclick="window.location.href='index.html'">⬅ Kembali</button>
   </div>
-  <!-- Notification -->
-  <div id="notification" class="notification hidden">✅ Data berhasil disimpan!</div>
 
+  <!-- Tombol kembali -->
+  <button class="backBtn" onclick="window.location.href='index.html'">⬅ Kembali</button>
+
+  <!-- Notifikasi -->
+  <div id="notification" class="notification hidden">✅ Data berhasil disimpan!</div>
 
   <script src="script.js"></script>
 </body>
